--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en-US">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JQQ80D3KHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JQQ80D3KHW');
+</script>
+	
     <meta charset="UTF-8">
     <title>new page &#8211; etss</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -1341,13 +1351,14 @@
                                             <input size="1" type="text" name="form_fields[email]" id="form-field-email" class="elementor-field elementor-size-sm  elementor-field-textual" placeholder="Bill Number*" required="required" aria-required="true">
                                         </div>
                                         <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
+										<a href="https://retss.online/details/">
                                             <button type="submit" class="elementor-button elementor-size-sm">
 						<span >
 															<span class=" elementor-button-icon">
 																										</span>
 																						<span class="elementor-button-text">Submit</span>
 													</span>
-					</button>
+					</button> </a>
                                         </div>
                                     </div>
                                 </form>
